# aioflo

./: .coveragerc  .gitignore  .pre-commit-config.yaml  23843.tags  AUTHORS.md  LICENSE  Makefile  README.md  example.py  pyproject.toml  requirements_test.txt
.github/: pull_request_template.md
.github/workflows/: ci.yaml  publish.yaml
aioflo/: __init__.py  alarm.py  api.py  const.py  device.py  errors.py  location.py  presence.py  user.py  water.py
aioflo/util/: __init__.py
examples/: test_api.py
script/: test
tests/: common.py  conftest.py  const.py  test_alarm.py  test_api.py  test_device.py  test_location.py  test_presence.py  test_user.py  test_water.py
tests/fixtures/: __init__.py  alarms_response.json  device_close_valve_response.json  device_open_valve_response.json  health_test_response.json  user_info_expand_alarm_settings_response.json  water_metric_info_response.json
